[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openenv-support-agent"
version = "0.1.0"
description = "OpenEnv customer support environment with typed models, graders, and baseline agent."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi",
  "openenv-core[core]>=0.2.1",
  "openai",
  "pydantic",
  "requests",
  "uvicorn",
  "python-dotenv>=1.2.2",
]

[project.scripts]
server = "server.app:main"

[tool.setuptools]
include-package-data = true
py-modules = ["baseline", "environment", "main", "models", "test_environment"]
packages = ["server"]
